@@ -1,3 +1,6 @@
+Fri Oct 17 10:13:19 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/odbc.c: rollback SQLGetData changes to 1.481
+
 Fri Oct 17 10:05:00 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/genparams.c:
 	- use #ifdef ENABLE_DEVELOPING for truncation test
@@ -703,4 +706,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2622 2008-10-17 08:06:23 freddy77 Exp $
+$Id: ChangeLog,v 1.2623 2008-10-17 08:15:21 freddy77 Exp $
